# python-project-52

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  label_form.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  status_form.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  task_form.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_executor.py  0004_task_labels_tasklabelrelation_label.py
task_manager/templates/: base.html  delete_form.html  form.html  index.html  navbar.html
task_manager/templates/components/: base.html  delete_form.html  footer.html  form.html  navbar.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: detail.html  index.html
task_manager/templates/users/: delete_user_confirmation.html  index.html  users_list.html
task_manager/tests/: test_user.py
task_manager/tests/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/tests/labels/: test_label.py
task_manager/tests/statuses/: test_status.py
task_manager/tests/tasks/: test_filter.py  test_task.py
task_manager/users/: admin.py  forms.py  models.py  signup_form.py  urls.py  views.py
(+5 files in other folders)
