[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivan Scherbakov <lolwut155@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.2"
django-filter = "^24.3"
rollbar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"
flake8 = "^7.1.1"
coverage = "^7.6.1"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
